[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/fight_data_creator/scenes/PropertyItemBox.gd" type="Script" id=1]
[ext_resource path="res://addons/fight_data_creator/res/DefaultFont.tres" type="DynamicFont" id=2]

[node name="PropertyItemBox" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 0
custom_constants/separation = 10
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertyName" type="Label" parent="."]
margin_top = 289.0
margin_right = 110.0
margin_bottom = 311.0
custom_fonts/font = ExtResource( 2 )
text = "placeholder"

[node name="PropertyType" type="Label" parent="."]
modulate = Color( 0.054902, 0.717647, 0.803922, 1 )
margin_left = 120.0
margin_top = 289.0
margin_right = 160.0
margin_bottom = 311.0
custom_fonts/font = ExtResource( 2 )
text = "type"

[node name="ModifyButton" type="Button" parent="."]
margin_left = 170.0
margin_right = 242.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 2 )
text = "Modify"

[node name="RemoveButton" type="Button" parent="."]
margin_left = 252.0
margin_right = 324.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 2 )
text = "Remove"

[connection signal="pressed" from="ModifyButton" to="." method="_on_ModifyButton_pressed"]
[connection signal="pressed" from="RemoveButton" to="." method="_on_RemoveButton_pressed"]
